--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Foodies' Dinerz Palace</title>
 </head>
 <body>
-    
+    <nav>
+        <!-- The Navbar will go here -->
+    </nav>
+    <div class="header">
+        <h1>Foodies' Dinerz Palace</h1>
+        <p class="intro-text">It's our commitment to make you fat,but it's your responsibility to watch your weight</p>
+
+
+
+
+    </div>
+
+
+    <h1>Foodies' Dinerz Palace</h1>
+
+
+
+
 </body>
 </html>
